--- a/c/cr/cra/craigslist.ca.html
+++ b/c/cr/cra/craigslist.ca.html
@@ -1,73 +1,126 @@
-<!--The following is the downloaded HTML source of the craigslist.ca privacy policy that was archived on 2011-11-02.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20111102154429id_/http%3A//www.craigslist.org/about/privacy_policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the craigslist.ca privacy policy that was archived on 2013-12-20.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131220202428id_/https%3A//www.craigslist.org/about/privacy.policy) for the most accurate reproduction.-->
 
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
-	<title>craigslist | about &gt; privacy policy</title>
-	<link type="text/css" rel="stylesheet" media="all" href="http://www.craigslist.org/styles/craigslist.css?v=9">
-	<meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;">
-</head>
+<!DOCTYPE html><html class=""><head>
+        <title>craigslist | privacy policy</title>
+        <link rel="stylesheet" href="http://www.craigslist.org/styles/clnew.css">
+        <meta name="viewport" content="initial-scale=1.0, user-scalable=1">
+        <style>
+            #pphead { margin-bottom: 1.5em; }
+            #pphead > h2 { margin-bottom: 0; }
+            #pphead > p  { font-size: smaller; }
+        </style>
+    </head>
 
-<body>
+    <body class="simple footer w1024">
+    <script type="text/javascript"><!--
+        function C(k){return(document.cookie.match('(^|; )'+k+'=([^;]*)')||0)[2]}
+        var pagetype, pagemode;
+        (function(){
+            var h = document.documentElement;
+            h.className = h.className.replace('nojs', '');
+            var b = document.body;
+            var bodyClassList = b.className.split(/\s+/);;
+            pagetype = bodyClassList[0];
+            var fmt = C('cl_fmt');
+            if (fmt) {
+                pagemode = fmt;
+                bodyClassList.push(fmt);
+            } else if (screen.width <= 480) {
+                pagemode = 'mobile';
+                bodyClassList.push(pagemode);
+            }
+            var width = window.innerWidth || document.documentElement.clientWidth;
+            if (width > 1000) { bodyClassList.push('w1024'); }
+            if (typeof catType !== 'undefined') {
+                var mode = (decodeURIComponent(C('cl_img') || '').match(new RegExp(catType + ':([^,]+)', 'i')) || {})[1];
+                for (var i = 0, len = bodyClassList.length; i < len; i++){
+                    if (bodyClassList[i] === 'map') { mode = undefined; }
+                }
+                if (mode) { bodyClassList.push(mode); }
+            }
+            b.className = bodyClassList.join(' ');
+        }());
+    --></script>
 
-<div id="sc">
-	<div id="banner">
-		<div id="logo">
-			<a href="http://www.craigslist.org/">craigslist</a><br>
-			<span>online community</span>
-		</div>
-		<div id="update">Updated:<br>Sep 15th 2008 04:29 PM</div>
-	</div>
-	<div id="content">
-		<h2><a href="/about/">about</a> &gt; privacy policy</h2>
+        <div id="pagecontainer">
+            <header><div class="contents">
+                <a href="/">craigslist</a> &gt; <a href="/about/">about</a> &gt; privacy policy 
+            </div></header>
 
-		<div>
-		<h3>Privacy Policy<br></h3>
-<p>craigslist has established this privacy policy to explain to you how your information is protected, collected and used, which may be updated by craigslist from time to time.  craigslist will provide notice of materially significant changes to this privacy policy by posting notice on the craigslist site.</p>
-<h4>1. Protecting your privacy</h4>
-<ul>
-<li>We don't run banner ads, pop ups, pop unders, or any other kind of commercial ads. </li>
-<li>We don't share your information with third parties for marketing purposes. </li>
-<li>We don't engage in cross-marketing or link-referral programs with other sites. </li>
-<li>We don't employ tracking devices for marketing purposes ("cookies", "web beacons," single-pixel gifs). </li>
-<li>We don't send you unsolicited communications for marketing purposes. </li>
-<li>We offer <a href="anonymize"> email anonymization &amp; relay</a>, to reduce 3rd party harvesting &amp; spam. </li>
-<li>Account information is password-protected. Keep your password safe. </li>
-<li>Forums use basic webserver authentication. Close your browser to log out. </li>
-<li>craigslist does not knowingly collect any information from persons under the age of 13.  If craigslist learns that a posting is by a person under the age of 13, craigslist will remove that post. </li>
-<li>craigslist, or people who post on craigslist, may provide links to third party websites, which may have different privacy practices.  We are not responsible for, nor have any control over, the privacy policies of those third party websites, and encourage all users to read the privacy policies of each and every website visited. </li>
-</ul>
-<h4>2. Data we collect</h4>
-<ul>
-<li>We sometimes collect your email address, for purposes such as sending self-publishing and confirmation emails, authenticating user accounts, providing subscription email services, registering for forums, etc. </li>
-<li>For paid job postings, we collect contact information, such as name(s), phone/fax number(s), and address for billing purposes. </li>
-<li>We sometimes collect your phone number for account authentication  purposes, and may transmit it to a third party service for tele-robotic verification. </li>
-<li>craigslist does not store credit card information.  Credit card transactions are transmitted to a financial gateway, and we endeavor to protect the security of your payment information during transmission by using Secure Sockets Layer (SSL) technology. </li>
-<li>We may collect personal information if you provide it in feedback or comments, post it on our classifieds or interactive forums, or if you contact us directly.  Please do not post any personal information on craigslist's forums or classifieds that you expect to keep private. </li>
-<li>Our web logs collect standard web log entries for each page served, including your IP address, page URL, and timestamp. Web logs help us to diagnose problems with our server, to administer the craigslist site, and to otherwise provide our service to you. </li>
-</ul>
-<h4>3. Data we store</h4>
-<ul>
-<li>All classified and forum postings are stored in our database, even after "deletion," and may be archived elsewhere. </li>
-<li>Our web logs and other records are stored indefinitely. </li>
-<li>Registered job posters can access and update their account information through the account homepage. </li>
-<li>Although we make good faith efforts to store the information in a secure operating environment that is not available to the public, we cannot guarantee complete security. </li>
-</ul>
-<h4>4. Archiving and display of craigslist postings by search engines and other sites</h4>
-<p>Search engines and other sites not affiliated with craigslist - including <a href="http://archive.org">archive.org</a>, <a href="http://www.google.com"></a>google.com, and <a href="http://groups.yahoo.com"></a>groups.yahoo.com - archive or otherwise make available craigslist postings, including resumes</p>
-<h4>5. Circumstances in which craigslist may release information</h4>
-<ul>
-<li>Craigslist may disclose information about its users if required to do so by law or in the good faith belief that such disclosure is reasonably necessary to  respond to subpoenas, court orders, or other legal process. </li>
-<li>Craigslist may also disclose information about its users to law enforcement officers or others, in the good faith belief that such disclosure is reasonably necessary to: enforce our  <a href="terms.of.use">Terms of Use</a>; respond to claims that any posting or other content violates the rights of  third-parties; or protect the rights, property, or personal safety of craigslist,  its users or the general public. </li>
-</ul>
-<h4>6. International Users</h4>
-<p>By visiting our web site and providing us with data, you acknowledge and agree that due to the international dimension of craigslist we may use the data collected in the course of our relationship for the purposes identified in this policy or in our other communications with you, including the transmission of information outside your resident jurisdiction.  In addition, please understand that such data may be stored on servers located in the United States.  By providing us with your data, you consent to the transfer of such data.</p>
-<h4>7. Feedback</h4>
-<p>We welcome your feedback on this document in our  <a href="http://sfbay.craigslist.org/forums/?forumID=8">feedback forum</a>.</p><br><hr>Still have questions? try our <a href="http://forums.craigslist.org/?forumID=9">help desk</a> discussion forum or <a href="/cgi-bin/emailForm.cgi">send us a note</a>.<br>
-		</div>
+            <section class="body">
+                <div id="postingbody">
+                    <section id="pphead">
+                        <h2>craigslist Privacy Policy <small>(updated December 5, 2013)</small></h2>
+                        <p>
+                            <a href="terms.of.use">terms of use</a>&nbsp;&nbsp;|&nbsp;&nbsp;
+                            <a href="http://forums.craigslist.org/?forumID=8">feedback</a>
+                        </p>
+                    </section>
 
-	</div>
-</div>
+                    <p>This policy details how data about you is collected/used/disclosed when you visit our websites and services (together, "CL") or otherwise interact with us. If we update it, we will revise the date, place notices on CL if a change is material, and/or obtain your consent as required by law.</p>
 
+                    <h3>1. Protecting your privacy</h3>
+                    <ul>
+                        <li>We take precautions to prevent unauthorized access to or misuse of data about you.</li>
+                        <li>We do not run ads, other than classified ads posted by our users.</li>
+                        <li>We do not share your data with third parties for marketing purposes.</li>
+                        <li>We do not engage in cross-marketing or link-referral programs with other sites.</li>
+                        <li>We do not employ tracking devices for marketing purposes. </li>
+                        <li>We do not send you unsolicited communications for marketing purposes.</li>
+                        <li>We do not engage in affiliate marketing (and prohibit it on CL).</li>
+                        <li>We do provide email proxy &amp; relay to reduce unwanted mail.</li>
+                        <li>CL links to third party sites  - please review their privacy policies.</li>
+                    </ul>
+
+                    <h3>2. Data we use to provide/improve our services and/or combat fraud/abuse:</h3>
+                    <ul>
+                        <li>data you post on CL, or send us directly or via other sites. Please do not post private data. </li>
+                        <li>credit card data, which is transmitted to payment processors via a security protocol (e.g. SSL).</li>
+                        <li>data you provide (e.g. email address, name, address, phone, fax, photos, tax ID).</li>
+                        <li>web log data (e.g. pages viewed, access times, IP address, HTTP headers).</li>
+                        <li>data collected via cookies (e.g. keyword searches and "favorites" lists). </li>
+                        <li>data about your devices (e.g. screen size, DOM local storage, plugins).</li>
+                        <li>data from 3rd parties (e.g. phone type, general location derived from IP address).</li>
+                    </ul>
+
+                    <h3>3. Data we store</h3>
+                    <ul>
+                        <li>We retain data as long as needed for our business purposes and/or as required by law.</li>
+                        <li>We make good faith efforts to store data securely, but make no guarantees.</li>
+                        <li>You may access and update certain data about you by logging into your account.</li>
+                    </ul>
+
+                    <h3>4. Circumstances in which we may disclose user data:</h3>
+                    <ul>
+                        <li>to vendors and service providers (e.g. payment processors) working on our behalf.</li>
+                        <li>to respond to subpoenas, court orders, or other legal process. </li>
+                        <li>to protect our rights, property, or safety, or that of our users or the general public.</li>
+                        <li>with your consent (e.g. if you authorize us to share data with other users).</li>
+                        <li>in connection with a merger, bankruptcy, or sale/transfer of assets to another company.</li>
+                        <li>in aggregate or summary form, as long as it cannot reasonably be used to identify you.</li>
+                    </ul>
+
+                    <b>International Users</b> - By visiting CL or providing us data, you agree we may use and disclose data we collect for purposes listed here or as communicated to you, transmit it outside your resident jurisdiction, and store it on servers in the United States. For more information please contact our privacy officer at privacy@craigslist.org.
+
+                </div>
+            </section>
+            <footer>
+
+            <ul class="clfooter">
+                <li>© 2013</li>
+                <li><a href="//www.craigslist.org/about/help/">help</a></li>
+                <li><a href="//www.craigslist.org/about/scams">safety</a></li>
+                <li class="desktop"><a href="//www.craigslist.org/about/privacy.policy">privacy</a></li>
+                <li class="desktop"><a href="https://forums.craigslist.org/?forumID=8">feedback</a></li>
+                <li class="desktop"><a href="//www.craigslist.org/about/craigslist_is_hiring">cl jobs</a></li>
+                <li><a href="//www.craigslist.org/about/terms.of.use">terms</a></li>
+                <li><a href="//www.craigslist.org/about/">about</a></li>
+            </ul>
+        </footer>
+
+        </div>
+    
 
 
 </body></html>
