--- a/f/fr/fre/freewebs.com.html
+++ b/f/fr/fre/freewebs.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the freewebs.com privacy policy that was archived on 2013-04-27.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130427004513id_/http%3A//www.webs.com/privacy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the freewebs.com privacy policy that was archived on 2013-12-20.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131220203050id_/http%3A//www.webs.com/privacy.htm) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html><head>
 		<title>Privacy Policy - Webs</title>
@@ -26,13 +26,12 @@
 		<script type="text/javascript" src="http://static.websimages.com/JS/Tracker.js"></script>
 
 <script type="text/javascript">
-	if(typeof(window.mpq) === 'undefined') window.mpq = [['init', '58fa82747b4c3f4992b74583e70b8940']];
 	</script>
 
 <script type="text/javascript" src="http://static.websimages.com/static/global/js/webs/visitor/visitorservice.js"></script>
 <script type="text/javascript">
 			var _gaq = _gaq || [];
-			_gaq.push(['_setAccount', 'UA-230305-2']);
+			_gaq.push(['_setAccount', 'UA-33130564-1']);
 			_gaq.push(['_setDomainName', '.webs.com']);
 			_gaq.push(['_setAllowHash', false]);
 			_gaq.push(['_setAllowLinker', true]);
@@ -62,8 +61,8 @@
 						<div id="webs_public_nav">
 							<a href="/features.htm" title="Free Website Features">Features</a>
 							<a href="/pricing.htm" title="Small Business Website Pricing">Pricing</a>
-							<a href="/company.htm" title="Company" rel="nofollow" class="active-link">Company</a>
-							 <a href="http://www.webs.com/blog/" title="Webs Blog" rel="nofollow">Blog</a>
+							<a href="/company.htm" title="Company" class="active-link">Company</a>
+							 <a href="http://www.webs.com/blog/" title="Webs Blog">Blog</a>
 							 <div class="sign_in_wrap">
 								<a id="sign_in_nav" class="btn_core btn_core_md btn_core_blue" href="/s/login/relogin" rel="nofollow" title="Sign In">
 									<span>Sign In</span>
@@ -125,7 +124,7 @@
 				Webs is a website building and hosting service provided at <a href="http://www.webs.com" title="make a free small business website">http://www.webs.com</a> and <a href="http://www.freewebs.com" rel="nofollow">http://www.freewebs.com</a> and its directly associated domains, widgets, tools, services and applications that are operated by Webs (collectively, "Webs" or "Services"). Your privacy on the Internet is very important to us. We strive to make your online experience satisfying and safe.
 				</p>
 				<p>
-				This "Privacy Policy" explains what information we gather from our users and how we use it. By using or accessing our Services, you are accepting the practices described in this Privacy Policy. (Capitalized terms not defined herein have the meaning set forth in our <a href="http://www.webs.com/terms.htm" rel="nofollow">Terms of Service</a>).
+				This "Privacy Policy" explains what information we gather from our users and how we use it. By using or accessing our Services, you are accepting the practices described in this Privacy Policy. (Capitalized terms not defined herein have the meaning set forth in our <a href="http://www.webs.com/terms.htm">Terms of Service</a>).
 				</p>
 				<p>
 				Webs is not intended for children under 13 years of age. Consistent with the Federal Children's Online Privacy Protection Act of 1998 ("COPPA"), we will never knowingly gather or use personally identifiable information from anyone under the age of 13, and we do not allow anyone under the age of 13 to register on Webs.
@@ -193,7 +192,7 @@
 				</li>
 				</ul>
 				<p>
-				You should always review the policies of third party websites, applications and services to make sure you are comfortable with the ways in which they use information you share with them. Any information you share with them is at your own risk. If you find an application, website or service that violates our rules, you should report the violation to us using this <a href="http://www.webs.com/report.htm" rel="nofollow">automated form</a>, and we reserve the right to take action as we deem appropriate without assuming any obligation or liability to do so.
+				You should always review the policies of third party websites, applications and services to make sure you are comfortable with the ways in which they use information you share with them. Any information you share with them is at your own risk. If you find an application, website or service that violates our rules, you should report the violation to us using this <a href="http://www.webs.com/report.htm">automated form</a>, and we reserve the right to take action as we deem appropriate without assuming any obligation or liability to do so.
 				</p>
 				<h2><a name="whatAreCookies"></a>What are cookies?</h2>
 				<p>
@@ -228,7 +227,7 @@
 				Although we have established and maintain security procedures to protect your personally identifiable information, please be aware that no security measures are perfect or impenetrable. We cannot control the actions of other users with whom you share your information. We cannot guarantee that only authorized persons will view your information. We cannot ensure that information you share on Webs will not become publicly available. We are not responsible for third party circumvention of any privacy settings or security measures on Webs. You can reduce these risks by using common sense security practices such as choosing a strong password, using different passwords for different services, and using up-to-date antivirus software.
 				</p>
 				<p>
-				Please report any security violations to us on this <a href="http://www.webs.com/report.htm" rel="nofollow">automated form</a>.
+				Please report any security violations to us on this <a href="http://www.webs.com/report.htm">automated form</a>.
 				</p>
 				<h2><a name="howPrivate"></a>How private is the Content I upload?</h2>
 				<p>
@@ -239,7 +238,7 @@
 				</p>
 				<h2><a name="whatControl"></a>What control do I have over my information?</h2>
 				<p>
-				As a registered member, you may modify or update your personal account information at any time by logging into your account and (a) accessing the <a href="http://members.webs.com/s/account/myAccount" rel="nofollow">Settings</a> area for each Website you have created, and (b) accessing the Manage Profile area for each Website you have joined by clicking on the corresponding Edit Profile link on your <a href="http://members.webs.com/s/webs/" rel="nofollow">Dashboard</a> page. You may also remove the Website(s) you may have created on Webs at any time by logging into your account and clicking on the corresponding "Delete Site" link on your <a href="http://members.webs.com/s/webs/" rel="nofollow">Dashboard</a> page. Should you desire to do so, you may also delete and close your Webs account at any time by contacting our <a href="http://www.webs.com/contact.htm" rel="nofollow">support team</a>. Note that removed or deleted information may persist in backup copies for a reasonable period of time.
+				As a registered member, you may modify or update your personal account information at any time by logging into your account and (a) accessing the <a href="http://members.webs.com/s/account/myAccount" rel="nofollow">Settings</a> area for each Website you have created, and (b) accessing the Manage Profile area for each Website you have joined by clicking on the corresponding Edit Profile link on your <a href="http://members.webs.com/s/webs/" rel="nofollow">Dashboard</a> page. You may also remove the Website(s) you may have created on Webs at any time by logging into your account and clicking on the corresponding "Delete Site" link on your <a href="http://members.webs.com/s/webs/" rel="nofollow">Dashboard</a> page. Should you desire to do so, you may also delete and close your Webs account at any time by contacting our <a href="http://www.webs.com/contact.htm">support team</a>. Note that removed or deleted information may persist in backup copies for a reasonable period of time.
 				</p>
 				<h2><a name="howShared"></a>How is information shared?</h2>
 				<p>
@@ -258,7 +257,7 @@
 				<h2><a name="whoContact"></a>Who can I contact about this Privacy Policy?</h2>
 				<br>
 				<p>
-				To submit an inquiry about our Privacy Policy, please <a href="http://www.webs.com/contact.htm" rel="nofollow">contact our support department.</a>
+				To submit an inquiry about our Privacy Policy, please <a href="http://www.webs.com/contact.htm">contact our support department.</a>
 				</p>
 
 				<span class="last-updated">[Last updated: February 19, 2010]</span>
@@ -282,37 +281,36 @@
 			<dl class="left">
 				<dt>Company</dt>
 				<dd><a href="/company.htm" title="About Webs">Overview</a></dd>
-				<dd><a href="/Careers/" title="Careers" rel="nofollow">Careers</a></dd>
-				<dd><a href="/PR/" title="Press Room" rel="nofollow">Press Room</a></dd>
-				<dd><a href="/affiliates.htm" title="Affiliates Page" rel="nofollow">Affiliate Page</a></dd>
+				<dd><a href="/Careers/" title="Careers">Careers</a></dd>
+				<dd><a href="/PR/" title="Press Room">Press Room</a></dd>
+				<dd><a href="/affiliates.htm" title="Affiliates Page">Affiliate Page</a></dd>
 
-				<dd><a href="http://www.webs.com/blog/" title="Company Blog" rel="nofollow">Webs Blog</a></dd>
+				<dd><a href="http://www.webs.com/blog/" title="Company Blog">Webs Blog</a></dd>
 				</dl>
 
 			<dl class="left">
 				<dt>Features</dt>
 				<dd><a href="/features.htm" title="Free Website Features">Website Features</a></dd>
-				<dd><a href="/small-business-website.htm" title="Small Business Websites">Small Business Websites</a></dd>
+				<dd><a href="/small-business/" title="Small Business Websites">Small Business Websites</a></dd>
 				<dd><a href="/pricing.htm" title="Small Business Website Pricing">Premium Services</a></dd>
-                <dd><a href="/free-website-hosting.jsp" title="Free Hosting">Free Hosting</a></dd>
-				<dd><a href="/example-sites.htm" title="Example Sites" rel="nofollow">Example Sites</a></dd>
+				<dd><a href="/example-sites.htm" title="Example Sites">Example Sites</a></dd>
 		    </dl>
 
 			<dl class="left">
 				<dt>Contact</dt>
-				<dd><a href="/faq.htm" title="FAQ &amp; Help" rel="nofollow">FAQ &amp; Help</a></dd>
-				<dd><a href="http://webs-billing.com/" title="Billing Support" rel="nofollow">Billing Support</a></dd>
-				<dd><a href="/report.htm" title="Report Abuse" rel="nofollow">Report Abuse</a></dd>
+				<dd><a href="/faq.htm" title="FAQ &amp; Help">FAQ &amp; Help</a></dd>
+				<dd><a href="http://webs-billing.com/" title="Billing Support">Billing Support</a></dd>
+				<dd><a href="/report.htm" title="Report Abuse">Report Abuse</a></dd>
 
-				<dd><a href="/contact.htm" title="Other" rel="nofollow">Other</a></dd>
+				<dd><a href="/contact.htm" title="Other">Other</a></dd>
 
 			</dl>
 
 			<dl class="left" id="final_sitemap_list">
 				<dt>Policies</dt>
-				<dd><a href="/terms.htm" title="Terms of Service" rel="nofollow">Terms of Service</a></dd>
-				<dd><a href="/privacy.htm" title="Privacy Policy" rel="nofollow">Privacy Policy</a></dd>
-				<dd><a href="/devterms.htm" title="Developer Terms" rel="nofollow">Developer Terms</a></dd>
+				<dd><a href="/terms.htm" title="Terms of Service">Terms of Service</a></dd>
+				<dd><a href="/privacy.htm" title="Privacy Policy">Privacy Policy</a></dd>
+				<dd><a href="/devterms.htm" title="Developer Terms">Developer Terms</a></dd>
 			</dl>
 
 			<div id="webs_public_footer_close">
@@ -323,16 +321,16 @@
 					All Rights Reserved.
 				</p>
 				<p id="webs_footer_blog">
-					<a href="http://www.webs.com/blog/" title="Read the Webs Blog" target="_blank" rel="nofollow">Read</a>
+					<a href="http://www.webs.com/blog/" title="Read the Webs Blog" target="_blank">Read</a>
 					the Webs Blog
 				</p>
 				<p id="webs_footer_facebook">
-					<a href="http://www.facebook.com/#!/Webs" title="Join Webs on facebook" target="_blank" rel="nofollow">
+					<a href="http://www.facebook.com/#!/Webs" title="Join Webs on facebook" target="_blank">
 					
 						Join</a> our facebook page
 					</p>
 				<p id="webs_footer_twitter">
-					<a href="http://twitter.com/webs" title="Follow Webs on twitter" target="_blank" rel="nofollow">Follow</a>
+					<a href="http://twitter.com/webs" title="Follow Webs on twitter" target="_blank">Follow</a>
 					us on twitter
 				</p>
 
