--- a/m/mu/muz/muzy.com.html
+++ b/m/mu/muz/muzy.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the muzy.com privacy policy that was archived on 2013-05-25.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130525140537id_/http%3A//muzy.com/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the muzy.com privacy policy that was archived on 2013-12-21.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131221021113id_/http%3A//muzy.com/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns:fb="http://www.facebook.com/2008/fbml"><head><script type="text/javascript" async="" src="http://snapabug.appspot.com/snapabug.js"></script><script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script type="text/javascript">var NREUMQ=NREUMQ||[];NREUMQ.push(["mark","firstbyte",new Date().getTime()]);</script>
 <title>
@@ -43,20 +43,20 @@ Muzy
 
 </style>
 
-<link href="http://a.mucdn.com/assets/standard.css?1368055373" media="screen, projection" rel="stylesheet" type="text/css">
+<link href="http://a.mucdn.com/assets/standard.css?1386381661" media="screen, projection" rel="stylesheet" type="text/css">
 
 
 <script type="text/javascript">
   //<![CDATA[
-    window.AUTH_TOKEN = 'XqsERHCFIXKMptCg583NPaBZFMikhHtLnB1S02AyXX8=';
+    window.AUTH_TOKEN = 'mcgG1q4/i+WeXviZk+N8KpVIlDlfP2opdc/FrQOUOQQ=';
     window.HOST = '.muzy.com';
   //]]>
 </script>
 
-<script src="http://a.mucdn.com/assets/standard.js?1368055373" type="text/javascript"></script>
+<script src="http://a.mucdn.com/assets/standard.js?1386381661" type="text/javascript"></script>
 <script type="text/javascript">
 //<![CDATA[
-$.Muzy.PreloadImages(["http://a.mucdn.com/images/spinna.gif?1368055373","http://a.mucdn.com/images/styles/btn-bg-spinner.gif?1368055373","http://a.mucdn.com/images/styles/btn-bg-spinner-tan.gif?1368055373","http://a.mucdn.com/images/load-bars.gif?1368055373","http://a.mucdn.com/images/search/search_btn_down.gif?1368055373","http://a.mucdn.com/images/search/search_btn_hover.gif?1368055373"])
+$.Muzy.PreloadImages(["http://a.mucdn.com/images/spinna.gif?1386381661","http://a.mucdn.com/images/styles/btn-bg-spinner.gif?1386381661","http://a.mucdn.com/images/styles/btn-bg-spinner-tan.gif?1386381661","http://a.mucdn.com/images/load-bars.gif?1386381661","http://a.mucdn.com/images/search/search_btn_down.gif?1386381661","http://a.mucdn.com/images/search/search_btn_hover.gif?1386381661"])
 //]]>
 </script>
 
@@ -72,7 +72,7 @@ $.Muzy.PreloadImages(["http://a.mucdn.com/images/spinna.gif?1368055373","http://
 
 
 
-<link href="http://a.mucdn.com/images/iphone-icon.png?1368055373" rel="apple-touch-icon">
+<link href="http://a.mucdn.com/images/iphone-icon.png?1386381661" rel="apple-touch-icon">
 
 <script type="text/javascript">
   //<![CDATA[
@@ -99,7 +99,7 @@ var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga
 <div id="nav">
 <div class="inside">
 <div class="main_inside">
-<a href="http://muzy.com/"><img alt="Nav-logo" class="logo" height="52" src="http://a.mucdn.com/images/home/newer/nav-logo.png?1368055373" width="90"></a>
+<a href="http://muzy.com/"><img alt="Nav-logo" class="logo" height="52" src="http://a.mucdn.com/images/home/newer/nav-logo.png?1386381661" width="90"></a>
 <ul class="primary">
 <li class="home"><a href="http://muzy.com/"><span>home</span><div id="new_stuff_badge" style="display: none"></div></a></li>
 <li class="create with_menu">
@@ -108,37 +108,37 @@ var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga
 <div class="menu_inside">
 <ul>
 <li class="app">
-<a href="http://muzy.com/app/photobox?source=menu"><img alt="Photobox" src="http://a.mucdn.com/images/apps/icons/new/photobox.png?1368055373">
+<a href="http://muzy.com/app/photobox?source=menu"><img alt="Photobox" src="http://a.mucdn.com/images/apps/icons/new/photobox.png?1386381661">
 <span>Photobox</span>
 </a></li>
 <li class="seperator">&nbsp;</li>
 <li class="app">
-<a href="http://muzy.com/app/photo_collage?source=menu"><img alt="Photo_collage" src="http://a.mucdn.com/images/apps/icons/new/photo_collage.png?1368055373">
+<a href="http://muzy.com/app/photo_collage?source=menu"><img alt="Photo_collage" src="http://a.mucdn.com/images/apps/icons/new/photo_collage.png?1386381661">
 <span>Photo Collage</span>
 </a></li>
 <li class="seperator">&nbsp;</li>
 <li class="app">
-<a href="http://muzy.com/app/versus?source=menu"><img alt="Versus" src="http://a.mucdn.com/images/apps/icons/new/versus.png?1368055373">
+<a href="http://muzy.com/app/versus?source=menu"><img alt="Versus" src="http://a.mucdn.com/images/apps/icons/new/versus.png?1386381661">
 <span>Versus</span>
 </a></li>
 <li class="seperator">&nbsp;</li>
 <li class="app">
-<a href="http://muzy.com/app/photo_pile?source=menu"><img alt="Photo_pile" src="http://a.mucdn.com/images/apps/icons/new/photo_pile.png?1368055373">
+<a href="http://muzy.com/app/photo_pile?source=menu"><img alt="Photo_pile" src="http://a.mucdn.com/images/apps/icons/new/photo_pile.png?1386381661">
 <span>Photo Pile</span>
 </a></li>
 <li class="seperator">&nbsp;</li>
 <li class="app">
-<a href="http://muzy.com/app/photo?source=menu"><img alt="Photo" src="http://a.mucdn.com/images/apps/icons/new/photo.png?1368055373">
+<a href="http://muzy.com/app/photo?source=menu"><img alt="Photo" src="http://a.mucdn.com/images/apps/icons/new/photo.png?1386381661">
 <span>Photo</span>
 </a></li>
 <li class="seperator">&nbsp;</li>
 <li class="app">
-<a href="http://muzy.com/app/picmonkey?source=menu"><img alt="Picmonkey" src="http://a.mucdn.com/images/apps/icons/new/picmonkey.png?1368055373">
+<a href="http://muzy.com/app/picmonkey?source=menu"><img alt="Picmonkey" src="http://a.mucdn.com/images/apps/icons/new/picmonkey.png?1386381661">
 <span>PicMonkey</span>
 </a></li>
 <li class="seperator">&nbsp;</li>
 <li class="app">
-<a href="http://muzy.com/app/word_play?source=menu"><img alt="Word_play" src="http://a.mucdn.com/images/apps/icons/new/word_play.png?1368055373">
+<a href="http://muzy.com/app/word_play?source=menu"><img alt="Word_play" src="http://a.mucdn.com/images/apps/icons/new/word_play.png?1386381661">
 <span>Word Play</span>
 </a></li>
 <li class="all_apps">
@@ -255,7 +255,7 @@ If you have any questions about this Privacy Policy, please contact us at
 <div id="SnapABug_WP" style="display: none"></div>
 <div id="SnapABug_Applet" style="display: none"></div>
 <div id="snapabug_button" style="display: none; position: fixed; left: 0; top: 50%; margin-top: -75px;">
-<a href="#" onclick="SnapABug.startLink(); return false;"><img alt="Snapabug_button_v2" height="149" src="http://a.mucdn.com/images/snapabug_button_v2.png?1368055373" width="32"></a>
+<a href="#" onclick="SnapABug.startLink(); return false;"><img alt="Snapabug_button_v2" height="149" src="http://a.mucdn.com/images/snapabug_button_v2.png?1386381661" width="32"></a>
 </div>
 <script type="text/javascript">
   //<![CDATA[
@@ -291,12 +291,12 @@ If you have any questions about this Privacy Policy, please contact us at
 <script type="text/javascript">if (!NREUMQ.f) { NREUMQ.f=function() {
 NREUMQ.push(["load",new Date().getTime()]);
 var e=document.createElement("script");
-e.type="text/javascript";e.async=true;e.src="https://d1ros97qkrwjf5.cloudfront.net/42/eum/rum.js";
+e.type="text/javascript";e.async=true;e.src="https://js-agent.newrelic.com/nr-100.js";
 document.body.appendChild(e);
 if(NREUMQ.a)NREUMQ.a();
 };
 NREUMQ.a=window.onload;window.onload=NREUMQ.f;
 };
-NREUMQ.push(["nrfj","beacon-3.newrelic.com","b0e1ea65a6",202106,"IAoLQENYXQhRFxtfVg8VSkRDXkcFVxw=",0.0,36,new Date().getTime(),"","","","",""])</script>
+NREUMQ.push(["nrfj","beacon-6.newrelic.com","b0e1ea65a6",202106,"IAoLQENYXQhRFxtfVg8VSkRDXkcFVxw=",0.0,29,new Date().getTime(),"","","","",""])</script>
 
-<script type="text/javascript" async="" src="https://d1ros97qkrwjf5.cloudfront.net/42/eum/rum.js"></script></body></html>
+<script type="text/javascript" async="" src="https://js-agent.newrelic.com/nr-100.js"></script></body></html>
